--- a/PL/login/LoginSystem.xaml
+++ b/PL/login/LoginSystem.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:PL"
-        Title="Login System" Height="450" Width="800">
+                Closed="Window_Closed"
+    Title="Login System" Height="450" Width="800">
 
     <Grid Background="#F0F0F0">
         <!-- Title -->
